# SearchingInCBS.logFileByRegex-

./: CMakeLists.txt  main.cpp  test.txt
